2do commit - corrige rutas css e imagenes de proyectos

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Mi CV - Roberto Duran</title>
-  <link rel="stylesheet" href="../GITHUBPRUEBAFINAL/assets/css/index.css"> <!-- Enlace al archivo CSS -->
+  <link rel="stylesheet" href="./assets/css/index.css"> <!-- Enlace al archivo CSS -->
 </head>
 <body>
 
@@ -13,7 +13,7 @@
       <ul>
         <li><a href="#educacion">Educación</a></li>
         <li><a href="#experiencia">Experiencia</a></li>
-        <li><a href="../GITHUBPRUEBAFINAL/assets/portafolios/indexportafolio.html" target="_blank">Portafolio</a></li>
+        <li><a href="./assets/portafolios/indexportafolio.html" target="_blank">Portafolio</a></li>
       </ul>
     </nav>
     <h1>Nombre Apellido</h1>
