--- a/assets/portafolios/trabajo1/index.html
+++ b/assets/portafolios/trabajo1/index.html
@@ -15,7 +15,7 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
 
   <!-- Custom CSS -->
-  <link rel="stylesheet" href="/BOOTSTRAP/assets/css/style.css">
+  <link rel="stylesheet" href="./assets/css/style.css">
 
   <style>
     body {
@@ -58,7 +58,7 @@
       <!-- Card 1 -->
       <div class="col">
         <div class="card h-100">
-          <img src="/BOOTSTRAP/assets/img/cupon-1.jpg" class="card-img-top" alt="Producto 1">
+          <img src="./assets/img/cupon-1.jpg" class="card-img-top" alt="Producto 1">
           <div class="card-body">
             <h5 class="card-title">Promo Spa Relajante</h5>
             <p class="card-text text-secondary">Disfruta de un día de relajación total en el mejor spa de la ciudad.</p>
@@ -71,7 +71,7 @@
       <!-- Card 2 -->
       <div class="col">
         <div class="card h-100">
-          <img src="/BOOTSTRAP/assets/img/cupon-2.jpg" class="card-img-top" alt="Producto 2">
+          <img src="./assets/img/cupon-2.jpg" class="card-img-top" alt="Producto 2">
           <div class="card-body">
             <h5 class="card-title">Cena para dos</h5>
             <p class="card-text text-secondary">Cena romántica en restaurante gourmet con vista panorámica.</p>
@@ -84,7 +84,7 @@
       <!-- Card 3 -->
       <div class="col">
         <div class="card h-100">
-          <img src="/BOOTSTRAP/assets/img/cupon-3.jpg" class="card-img-top" alt="Producto 3">
+          <img src="./assets/img/cupon-3.jpg" class="card-img-top" alt="Producto 3">
           <div class="card-body">
             <h5 class="card-title">Clinica Dental Quijada</h5>
             <p class="card-text text-secondary">Evaluacion + Blanqueamiento dental led + Limpieza + Fluoración.</p>
@@ -97,7 +97,7 @@
       <!-- Card 4 -->
       <div class="col">
         <div class="card h-100">
-          <img src="/BOOTSTRAP/assets/img/cupon-4.jpg" class="card-img-top" alt="Producto 4">
+          <img src="./assets/img/cupon-4.jpg" class="card-img-top" alt="Producto 4">
           <div class="card-body">
             <h5 class="card-title">Suricata Almacen</h5>
             <p class="card-text text-secondary">Colación para 2 personas + postre + Bebida.</p>
@@ -111,7 +111,7 @@
       <!-- Card 5 -->
       <div class="col">
         <div class="card h-100">
-          <img src="/BOOTSTRAP/assets/img/cupon-5.jpg" class="card-img-top" alt="Producto 5">
+          <img src="./assets/img/cupon-5.jpg" class="card-img-top" alt="Producto 5">
           <div class="card-body">
             <h5 class="card-title">Stukids Centro de Eventos</h5>
             <p class="card-text text-secondary">1,2 o 4 tikets para Stukids. Elige sucursal.</p>
@@ -125,7 +125,7 @@
       <!-- Card 6 -->
       <div class="col">
         <div class="card h-100">
-          <img src="/BOOTSTRAP/assets/img/cupon-6.jpg" class="card-img-top" alt="Producto 6">
+          <img src="./assets/img/cupon-6.jpg" class="card-img-top" alt="Producto 6">
           <div class="card-body">
             <h5 class="card-title">D-Latam Travel</h5>
             <p class="card-text text-secondary">San Padro de Atacam: 1 o 2 noches en alojamiento a eleccion.</p>
@@ -158,7 +158,7 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 <!-- footer -->
  <div class="text-center">
-  <img src="/BOOTSTRAP/assets/img/logo-black.png" class="cuppon" alt="">
+  <img src="./assets/img/logo-black.png" class="cuppon" alt="">
   <footer>
      <p>&copy; 2018 Cuppon Latam. Todos los derechos reservados.</p>
   </footer>
